// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList should match the snapshot passing an array with data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardList
    dataCards={
        Array [
            Object {
              "id": "COLORADO",
              "location": "COLORADO",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
            Object {
              "id": "ASPEN",
              "location": "ASPEN",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
            Object {
              "id": "SHMOOP",
              "location": "SHMOOP",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          id="COLORADO"
          location="COLORADO"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={undefined}
/>,
        <Card
          id="ASPEN"
          location="ASPEN"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={undefined}
/>,
        <Card
          id="SHMOOP"
          location="SHMOOP"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={undefined}
/>,
      ],
      "className": "CardList",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "COLORADO",
        "nodeType": "function",
        "props": Object {
          "id": "COLORADO",
          "location": "COLORADO",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "ASPEN",
        "nodeType": "function",
        "props": Object {
          "id": "ASPEN",
          "location": "ASPEN",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "SHMOOP",
        "nodeType": "function",
        "props": Object {
          "id": "SHMOOP",
          "location": "SHMOOP",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            id="COLORADO"
            location="COLORADO"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={undefined}
/>,
          <Card
            id="ASPEN"
            location="ASPEN"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={undefined}
/>,
          <Card
            id="SHMOOP"
            location="SHMOOP"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={undefined}
/>,
        ],
        "className": "CardList",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "COLORADO",
          "nodeType": "function",
          "props": Object {
            "id": "COLORADO",
            "location": "COLORADO",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "ASPEN",
          "nodeType": "function",
          "props": Object {
            "id": "ASPEN",
            "location": "ASPEN",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "SHMOOP",
          "nodeType": "function",
          "props": Object {
            "id": "SHMOOP",
            "location": "SHMOOP",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CardList should match the snapshot passing an array with data objects and a function 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardList
    dataCards={
        Array [
            Object {
              "id": "COLORADO",
              "location": "COLORADO",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
            Object {
              "id": "ASPEN",
              "location": "ASPEN",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
            Object {
              "id": "SHMOOP",
              "location": "SHMOOP",
              "stats": Object {
                "2005": 0.521,
                "2017": 0.521,
                "2018": 0.521,
                "2019": 0.521,
              },
            },
          ]
    }
    toggleCompare={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          id="COLORADO"
          location="COLORADO"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={[Function]}
/>,
        <Card
          id="ASPEN"
          location="ASPEN"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={[Function]}
/>,
        <Card
          id="SHMOOP"
          location="SHMOOP"
          stats={
                    Object {
                              "2005": 0.521,
                              "2017": 0.521,
                              "2018": 0.521,
                              "2019": 0.521,
                            }
          }
          toggleCompare={[Function]}
/>,
      ],
      "className": "CardList",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "COLORADO",
        "nodeType": "function",
        "props": Object {
          "id": "COLORADO",
          "location": "COLORADO",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "ASPEN",
        "nodeType": "function",
        "props": Object {
          "id": "ASPEN",
          "location": "ASPEN",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "SHMOOP",
        "nodeType": "function",
        "props": Object {
          "id": "SHMOOP",
          "location": "SHMOOP",
          "stats": Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          },
          "toggleCompare": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            id="COLORADO"
            location="COLORADO"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={[Function]}
/>,
          <Card
            id="ASPEN"
            location="ASPEN"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={[Function]}
/>,
          <Card
            id="SHMOOP"
            location="SHMOOP"
            stats={
                        Object {
                                    "2005": 0.521,
                                    "2017": 0.521,
                                    "2018": 0.521,
                                    "2019": 0.521,
                                  }
            }
            toggleCompare={[Function]}
/>,
        ],
        "className": "CardList",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "COLORADO",
          "nodeType": "function",
          "props": Object {
            "id": "COLORADO",
            "location": "COLORADO",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "ASPEN",
          "nodeType": "function",
          "props": Object {
            "id": "ASPEN",
            "location": "ASPEN",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "SHMOOP",
          "nodeType": "function",
          "props": Object {
            "id": "SHMOOP",
            "location": "SHMOOP",
            "stats": Object {
              "2005": 0.521,
              "2017": 0.521,
              "2018": 0.521,
              "2019": 0.521,
            },
            "toggleCompare": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CardList should match the snapshot passing an empty array 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardList
    dataCards={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "CardList",
    },
    "ref": null,
    "rendered": Array [],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "CardList",
      },
      "ref": null,
      "rendered": Array [],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
